--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -8,7 +8,7 @@
 }
 /* 속박스 */
 .top{
-    position: relative;
+    /* position: relative; */
     /* 부모자격 - .tmenu */
     height: 128px;
 }
@@ -37,13 +37,59 @@ nav.gnb ul{
 .gnb>ul>li>a{
     color: #222;
     text-decoration: none;
+    font-size: 1.7rem;
+    line-height: 4rem;
     line-height: 40px;
     margin: 0 10px;
+}
+
+/* GNB 서브메뉴 배경 상위메뉴 li에 가상요소로 만들기
+서브메뉴가 있는 li에 sm이름의 클래스를 준다! */
+.gnb>ul>li.sm:before{
+    content: '';
+    display: block;
+
+    position: absolute;
+    top: 128px;
+    left: 0;
+    width: 100%;
+    height: 0;
+    /* 부모는? */
+    background-color: #fff;
+    z-index: -1;
+    transition: .6s ease-out;
+}
+/* 상위메뉴 오버시 서브배경보이기 */
+.gnb>ul>li.sm:hover::before{
+    height: 200px;
+    border-bottom: 2px solid red;
+}
+
+/* GNB 서브메뉴 */
+.smenu{
+    text-align: center;
+    background-color: #fff;
+    /* 숨기기 */
+    /* height: 0;
+    overflow: hidden; */
+    /* 트랜지션 : 속시이지 */
+    transition: .4s ease-out;
+}
+/* 상위메뉴 오버시 하위메뉴 보이기  */
+.gnb>ul>li:hover .smenu{
+    height: 120px;
+}
+
+.smenu a{
+    font-size: 1.4rem;
+    line-height: 2;
+    color: #222;
+    text-decoration: none;
 }
 /* 1-3.탑메뉴 */
 aside.tmenu{
     position: absolute;
-    top: 0px;
+    top: 25px;
     right: 0px;
     /* 부모는? -> .top */
 }
@@ -51,12 +97,66 @@ aside.tmenu{
 .tmenu ul{
     /* 플렉스 박스 : 하위 li요소 옆으로 흐름! */
     display: flex;
+    /* 수직방향 정렬 : 중앙 */
+    align-items: center;
+}
+.tmenu>ul>li+li{
+    margin-left: 10px;
+}
+/* top메뉴 a */
+.tmenu>ul>li>a{
+    color: #222;
+    font-size: 1.5rem;
+    text-decoration: none;
 }
 /* sns 메뉴 박스 */
 .tmenu ol{
     /* 플렉스 박스 : 하위 li요소 옆으로 흐름! */
     display: flex;
 }
+/* sns li박스 */
+.sns li{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url(../images/icons.png) no-repeat;
+    /* 트랜지션 */
+    transition: .2s;
+}
+
+/* 스프라이츠(Sprites)로 배경이미지 넣기! */
+/* 트위터 */
+.sns li:nth-child(1){
+    background-position: 0px 0px;
+}
+/* 트위터오버시 */
+.sns li:nth-child(1):hover{
+    background-position: 0px -30px;
+}
+/* 인스타그램 */
+.sns li:nth-child(2){
+    background-position: -30px 0px;
+}
+/* 인스타그램 오버시 */
+.sns li:nth-child(2):hover{
+    background-position: -30px -30px;
+}
+/* 페이스북 */
+.sns li:nth-child(3){
+    background-position: -60px 0px;
+}
+/* 페이스북 오버시 */
+.sns li:nth-child(3):hover{
+    background-position: -60px -30px;
+}
+
+/* a요소 확장 */
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 /***************** 2.메인영역 *****************/
 .cont{
     min-height: 800px;
