--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/core.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/core.css
@@ -42,3 +42,12 @@ body{
     background-color: #ddd;
     border-radius: 5px;
 }
+
+/* 배경이미지 설명 넣기 숨기기 클래스 
+IR(Image Replacement)*/
+.ir{
+    display: block;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
