--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -44,7 +44,7 @@ nav.gnb ul {
 }
 
 .gnb > ul > li {
-     /* a요소의 패딩을 li로 이동함! */
+    /* a요소의 패딩을 li로 이동함! */
     margin: 0 10px;
 }
 /* GNB a요소 */
@@ -60,7 +60,7 @@ nav.gnb ul {
 /* GNB 서브메뉴 배경
 상위메뉴 li에 가상요소로 만들기
 서브메뉴가 있는 li에 sm이름의 클래스를 준다! */
-.gnb > ul > li.sm:before {
+.gnb > ul > li.sm::before {
     content: "";
     position: absolute;
     top: 129px;
@@ -99,14 +99,14 @@ nav.gnb ul {
     height: 90px;
 }
 .gnb > ul > li:nth-child(4):hover .smenu {
-   height: 70px;
+    height: 70px;
 }
 
 /* 가상요소로 밑줄 애니만들기 
 대상선택:
 1. gnb메뉴의 상위메뉴 a요소
 2. 사이드메뉴의 1,2번 li하위 a요소 */
-.gnb > ul > li > a::after{
+.gnb > ul > li > a::after {
     content: "";
     display: block;
 
