--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -27,7 +27,6 @@ h1.logo {
     width: 100px;
     margin: 0 auto;
     padding-top: 20px;
-    outline: 1px solid red;
 }
 /* 로고 이미지 */
 .logo img {
@@ -44,9 +43,10 @@ nav.gnb ul {
 }
 
 .gnb > ul > li {
-    /* a요소의 패딩을 li로 이동함! */
+    /* a요소의 마진을 li로 이동함! */
     margin: 0 10px;
 }
+
 /* GNB a요소 */
 .gnb > ul > li > a {
     position: relative;
@@ -156,11 +156,20 @@ nav.gnb ul {
 }
 
 .smenu a {
+    display: block;
+    /* 트랜스폼은 inline일 때 적용안됨! */
     font-size: 1.4rem;
     line-height: 2;
     color: #222;
     text-decoration: none;
+    transition: .3s;
 }
+/* 서브메뉴 a오버시 확대 */
+.smenu a:hover{
+    transform: scale(1.1);
+    color: orange;
+}
+
 /* 1-3.탑메뉴 */
 aside.tmenu {
     position: absolute;
