--- a/ZCSS/main.css
+++ b/ZCSS/main.css
@@ -7,11 +7,12 @@ html{
 
     /* 스크롤스냅 */
     overflow: auto;
-    scroll-snap-type: y mandatory;
+    font-size: 10px;
+    /* rem계산 시 쉽도록 10px */
 }
 
 body{
-    scroll-snap-align: start;
+    overflow: hidden;
 }
 /* 상단영역 */
 #top{
@@ -22,7 +23,11 @@ body{
     top: 0;
     left: 0;
     z-index: 999;
-    
+}
+ul,ol{
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 /* gnb메뉴
@@ -33,6 +38,7 @@ ul박스 가상요소로 clear처리 */
 .gnb{
     width: 600px;
     margin: 0 auto;
+    white-space: nowrap;
 }
 .gnb ul{
     margin: 0;
@@ -50,14 +56,14 @@ ul박스 가상요소로 clear처리 */
     width: 150px;
 }
 .gnb a{
+    font-size: 3rem;
     color: lightgreen;
     text-decoration: none;
     text-shadow: 
      1px 0 #000,
     -1px 0 #000,
     0 1px #000,
-    0 -1px #000
-    ;
+    0 -1px #000;
 }
 
 html,body{
@@ -102,9 +108,14 @@ body{
 /* 페이지별 컨텐츠 박스 */
 .pwrap{
     position: relative;
+    width: 90%;
     top: 300px;
     height: calc(100% - 350px);
     /* 부모높이값 보다 300px만큼 조금 더 그 크기를 뺀 높이값은 calc()로 계산한다! */
+    
+    /* 플렉스박스 */
+    display: flex;
+
     background-color: rgba(255, 255, 255, 0.525);
     /* 둥근모서리 brad */
     border-radius: 20px;
@@ -113,10 +124,6 @@ body{
     /* 양쪽 마진이 auto이면 양쪽을 등분해서 가로 중앙이 된다! */
 }
 
-.part{
-    text-align: center;
-    scroll-snap-align: start;
-}
 
 .part li{
     list-style: none;
@@ -124,9 +131,35 @@ body{
     font-size: 30px;
 }
 
+/* .pwrap 하위 .part박스 */
+.part{
+    flex: 1;
+    /* 1:1 비율로 등분할! */
+    padding: 50px;
+}
+
+/* 서브타이틀 */
+.part h2{
+    background-color: rgba(0, 0, 0, 0.473);
+    padding: 20px;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 4rem;
+    text-align: center;
+    text-shadow: 2px 2px 2px #000;
+}
+/* .part a요소 */
 .part a{
+    color: #222;
     text-decoration: none;
-    color: darkolivegreen;
+    font-size: 3.5rem;
+}
+
+/* pg1 공통 프로젝트 아이콘 */
+#pg1 .part a::before{
+    content: '😎';
+    margin-right: 10px;
+    line-height: 1.7;
 }
 
 /* h1요소 */
