--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -7,9 +7,9 @@
 @import url(./core.css);
 
 /* 공사중 표시 */
-body * {
+/* body * {
     outline: 1px dashed ghostwhite;
-}
+} */
 /* 전체배경색 */
 body{
     background-color: #000;
@@ -17,6 +17,10 @@ body{
 /***************************** 1.상단영역 *****************************/
 /* 속박스 */
 .top{
+    position: relative;
+    /* 부모자격: .gnb */
+    z-index: 999;
+    /* GNB서브메뉴를 올리기위한 설정! */
     height: 80px;
     /* 배경이미지 */
     background: url(../images/curtain.jpg) repeat-x;
@@ -40,7 +44,122 @@ body{
     }
 }/* 키프레임 */
 
-/***************************** 2.메인영역 *****************************/
+/* 1-2.GNB메뉴 */
+.gnb{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+/* ul박스 */
+.gnb ul{
+    display: flex;
+    font-family: 'Jua', sans-serif;
+}
+
+.gnb ul>li{
+    position: relative;
+    /* 부모자격 .smenu */
+    padding-bottom: 5px;
+    /* 서브메뉴와 공간연결을 위해 하단패딩줌 */
+}
+
+/* 상위li 두번째부터 */
+.gnb ul>li+li{
+    margin-left: 20px;
+}
+
+/* 상위메뉴 a */
+.gnb ul>li>a{
+    /* 트랜스폼 적용위해 인라인블록 */
+    display: inline-block;
+    font-size: 2rem;
+}
+/* 오버 시 변경 */
+.gnb ul>li:hover>a{
+    transform: scale(1.3);
+    color: aquamarine;
+    animation: titAni .5s ease-in infinite alternate;
+}
+
+/* 서브메뉴 */
+.smenu{
+    position: absolute;
+    /* 부모박스 가로방향 중앙맞추기 */
+    left: 50%;
+    /* 부모는?.gnb ul>li */
+    transform: translate(-50%,5px);
+    /* x축은 자기크기의 50%만큼 왼쪽이동, y축은 5px이동 */
+    width: 140px;
+    padding: 3px;
+    background: url(../images/bg_smenu.png) no-repeat center/cover;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #fff;
+    
+    /* 처음에 서브메뉴 숨기기 */
+    display: none;
+}
+/* 상위메뉴 li에 오버 시 서브메뉴 보이기 */
+.gnb ul>li:hover .smenu{
+    display: block;
+}
+
+/* 메뉴박스 가상요소로 삼각형 만들기  */
+.smenu::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    
+    /* 삼각형만들기 : 보더사용 */
+    border-bottom: 10px solid #2e2e2e;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+/* 서브메뉴 ol */
+.smenu ol{
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+/* 서브메뉴 a */
+.smenu a{
+    display: block;
+    /* a요소확장 */
+    font-size: 1.6rem;
+    line-height: 1.7;
+}
+/* 서브마우스 오버시 */
+.smenu a:hover{
+    color: red;
+}
+/* 오버시 가상요소로 이모티콘 */
+.smenu a:hover::after{
+    content: '📼';
+    /* 오른쪽 끝으로 보내기 */
+    float: right;
+}
+/* 예매 */
+.gnb ul>li:nth-child(2) .smenu a:hover::after{
+    content: '🎬';
+}
+/* 극장 */
+.gnb ul>li:nth-child(3) .smenu a:hover::after{
+    content: '🎥';
+}
+/* 극장 */
+.gnb ul>li:nth-child(4) .smenu a:hover::after{
+    content: '🎈';
+}
+/* 서브메뉴 li보더 상단 구분선 클래스 */
+.bdt{
+    border-top: 1px solid #ccc;
+}
+
+/************************ 2.메인영역 ************************/
 /* 속박스 */
 .cont{
     position: relative;
@@ -123,5 +242,76 @@ body{
 
 /***************************** 3.하단영역 *****************************/
 .info{
+    display: flex;
     height: 100px;
+    /* 수직방향정렬 : ai */
+    align-items: center;
 }
+
+/* 3-1.로고  */
+.logo{
+    margin-right: 20px;
+}
+/* 3-2.회사정보  */
+.corp address{
+    font-family: 'Cute Font', cursive;
+    color: #fff;
+    font-style: normal;
+    font-size: 1.8rem;
+    line-height: 2rem;
+}
+/* 3-3.SNS */
+.sns{
+    margin-left: auto;
+}
+.sns ol{
+    /* 플렉스박스 */
+    display: flex;
+}
+.sns li{
+    width: 34px;
+    height: 34px;
+    /* outline: 1px dashed yellow; */
+}
+/* li사이간격 */
+.sns li+li{
+    margin-left: 5px;
+}
+/* a확장 */
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 34px;
+    text-align: center;
+}
+
+/* 오버 시 sns 글자색 */
+
+/* 페북 */
+.sns a[class$=book]:hover{
+    color: lightskyblue;
+}
+/* 트위터 */
+.sns a[class^='fa-brands fa-square-tw']:hover{
+    color: lightblue;
+}
+/* 인스타 */
+.sns a[class*=ins]:hover{
+    color: lightpink;
+}
+/****************************************** 
+    속성선택자: [속성명]
+    - 속성명의 특정값을 비교하는 3가지 방법
+    1. [속성명=값]->정확히 일치하는 값
+    2. [속성명*=값]->값 내용 중 있기만하면 찾음
+    3. [속성명^=값]->값내용이 시작하는 문자열 찾음
+    4. [속성명$=값]->값내용이 끝나는 문자열 찾음
+
+    - 별은 하늘에 있고 모두가 볼 수 있다 *= 모든 일치내용
+    - 시작할 때는 웃으면서 시작 ^= 시작하는 내용
+    - 끝날 때는 돈받고 끝나라! $= 끝나는 내용
+
+    - 사용하는 문자열에 문제가 없다면 따옴표를 쓰지 않아도 된다!
+    (띄어쓰기, 특수문자 등이 있다면 따옴표사용)
+******************************************/
