--- a/001.HTML학습/03.Robot_PJ/css/Robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/Robot.css
@@ -16,8 +16,9 @@ html {
     scroll-behavior: smooth;
   }
 /* 전체 가로스크롤 방지 */
-body {
+html,body {
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 html,
