--- a/001.HTML학습/03.Robot_PJ/css/Robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/Robot.css
@@ -16,9 +16,8 @@ html {
     scroll-behavior: smooth;
   }
 /* 전체 가로스크롤 방지 */
-html,body {
+body {
     overflow-x: hidden;
-    overflow-y: auto;
 }
 
 html,
