--- a/001.HTML학습/03.Robot_PJ/css/robot_media.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot_media.css
@@ -52,6 +52,11 @@
 /* 500px 이하 */
 @media screen and (max-width: 500px) {
     
+    html,body {
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
     /* 2-2-3.내용단락 */
     .dcbx p {
         /* 다중열개수 */
