--- a/001.HTML학습/03.Robot_PJ/css/Robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/Robot.css
@@ -134,6 +134,7 @@ body * {
     border-radius: 50%;
     border: 5px outset #fff;
     background-color: #ccc;
+    z-index: 1;
 }
 /* 버튼 a요소 */
 .btnTop a {
