--- a/001.HTML학습/03.Robot_PJ/css/robot_media.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot_media.css
@@ -53,8 +53,10 @@
 @media screen and (max-width: 500px) {
     
     html,body {
+        width: 100vw;
+        /* 보이는화면 가로크기 채움 */
         overflow-x: hidden;
-        overflow-y: auto;
+        /* 가로스크롤 없앰 */
     }
 
     /* 2-2-3.내용단락 */
