--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/main.css
@@ -131,8 +131,11 @@ body{
 /* 캐릭터 설명 타이틀 */
 .cd h3{
     font-family: 'Gugi', cursive;
-    font-size: 24px;
+    /* 글자크기 최대 24px, 화면가로크기의 1.7% */
+    font-size: min(24px,1.7vw);
     font-weight: normal;
+    /* 줄바꿈방지 */
+    white-space: nowrap;
     padding: 15px 10px 5px;
     letter-spacing: -1px;
 }
@@ -152,16 +155,19 @@ body{
 /* 캐릭터 설명문단 */
 .cd p{
     font-family: 'Single Day', 'ZCOOL KuaiLe', cursive;
-    font-size: 18px;
+    /* 글자크기 최대 18px, 화면가로크기의 1.3% */
+    font-size: min(1.3vw,18px);
     line-height: 1.6;
-    padding: 10px;
+    /* 패딩크기 최대 15px, 화면가로크기의 1% */
+    padding: min(1vw,15px);
     /* 양쪽정렬 justify - taj */
     text-align: justify;
 }
 
 /* 캐릭터 첫번째 문단 첫글자 가상요소로 디자인 변경하기! */
 .cd p:first-child:first-letter{
-    font-size: 50px;
+    /* 글자크기 최대 50px, 화면가로크기의 3% */
+    font-size: min(3vw,50px);
     font-weight: bold;
     color: cyan;
     /* 그림자로 글자 테두리주기
