--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -241,6 +241,19 @@ aside.tmenu {
     height: 100%;
 }
 
+.ham{
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    font-size: 40px;
+    transform: scaleX(1.5);
+    display: none;
+}
+
 /***************** 2.메인영역 *****************/
 .cont {
     min-height: 800px;
