--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
@@ -26,6 +26,10 @@
             => 결과 : 8.235
         */
     }
+    .cont {
+        /* 가로크기에 대한 비율을 만들어준다! */
+        min-height: 100vw;
+    }
     /* 전체 캐릭터 박스 */
     .cbx {
         margin-top: 10vw;
@@ -53,7 +57,50 @@
 }
 /* 1024px 사이즈 이하 미디어쿼리 끝 */
 
-/* 1024px 사이즈 이하 미디어쿼리 시작 */
-@media screen and (max-width: 1024px) {
+/* 500px 사이즈 이하 미디어쿼리 시작 */
+@media screen and (max-width: 500px) {
+    /* 디스플레이 없애기 */
+    .tmenu, .gnb{
+        display: none;
+    }
+    /* 상단영역 */
+    .top{
+        height: 80px;
+    }
+    /* 캐릭터박스 한줄에 하나 */
+    .cat{
+        width: 99%;
+    }
+    /* 캐릭터 설명박스 */
+    .cd{
+        /* 자리차지 포지션으로 전환! */
+        position: static;
+    }
+    /* 설명박스 제목 */
+    .cd h3{
+        font-size: 4.3vw;
+    }
+    /* 설명박스 문단 */
+    .cd p{
+        font-size: 4vw;
+        padding: 3vw;
+    }
+    /* 문단 첫글자 */
+    .cd p:first-child:first-letter{
+        font-size: 8vw;
+    }
+
+    /* 하단영역 */
+    .blink li:nth-child(-n+3){
+        display: none;
+    }
+    #sel{
+        bottom: 10px;
+        top: auto;
+    }
+    
+    .ham{
+        display: block;
+    }
 }
-/* 1024px 사이즈 이하 미디어쿼리 끝 */
+/* 500px 사이즈 이하 미디어쿼리 끝 */
