--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -251,6 +251,8 @@ aside.tmenu {
     border: none;
     font-size: 40px;
     transform: scaleX(1.5);
+    
+    /* 처음에 숨기기 */
     display: none;
 }
 
