--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
@@ -57,14 +57,21 @@
 }
 /* 1024px 사이즈 이하 미디어쿼리 끝 */
 
-/* 500px 사이즈 이하 미디어쿼리 시작 */
-@media screen and (max-width: 500px) {
+/* 780px 사이즈 이하 미디어쿼리 시작 */
+@media screen and (max-width: 780px) {
+    html,body{
+        width: 100vw;
+        overflow-x: hidden;
+    }
     /* 디스플레이 없애기 */
     .tmenu, .gnb{
         display: none;
     }
     /* 상단영역 */
     .top{
+        position: relative;
+        /* 부모자격 - 햄버거 버튼(.ham)
+        -> 가로스크롤 문제를 발생하므로 부모자격을 준다! */
         height: 80px;
     }
     /* 캐릭터박스 한줄에 하나 */
@@ -98,9 +105,9 @@
         bottom: 10px;
         top: auto;
     }
-    
+    /* 햄버거 버튼 보이기 */
     .ham{
         display: block;
     }
 }
-/* 500px 사이즈 이하 미디어쿼리 끝 */
+/* 780px 사이즈 이하 미디어쿼리 끝 */
