--- a/001.HTML학습/02.Drama_PJ/css/drama.css
+++ b/001.HTML학습/02.Drama_PJ/css/drama.css
@@ -12,3 +12,77 @@ html,body{
     margin: 0;
     padding: 0;
 }
+
+/* 테이블 공통 */
+.tbl{
+    /* 글자체 */
+    font-family: 'Hahmlet', serif;
+    /* 글자색 */
+    color: #222;
+    /* 테이블 기본간극 없애기
+    table태그에 border="1"을 넣고 확인해본다! */
+    border-collapse: collapse;
+    /* 기본값 separate */
+}
+
+#drama{
+    font-size: 24px;
+    margin: 0 auto;
+    width: 1000px;
+    /* 테이블은 width 지정이 없으면 내용만큼 늘어남! 좁으면 아래로 내용이 줄바꿈한다1 */
+}
+
+/* 테이블 제목 */
+#drama caption{
+    font-size: 35px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    padding: 50px 0 20px;
+}
+/* td와 th 패딩 */
+#drama td, #drama th{
+    padding: 8px 10px;
+}
+/* td에 밑줄 넣기 */
+#drama tbody td{
+    border-bottom: 1px solid #ccc;
+}/* th에 윗줄, 아랫줄 두꺼운 보더 넣기 */
+#drama th{
+    border-top: 2px solid #555;
+    border-bottom: 2px solid #555;
+}
+/* 마지막 tbody 마지막 tr 아랫줄 두꺼운보더 */
+#drama tbody tr:last-child td{
+    border-bottom: 2px solid #555;
+}
+/* tbody의 첫번째 td(번호항목) 중앙정렬 */
+#drama tbody td:first-child{
+    text-align: center;
+    /* background-color: red; */
+}
+/* 하단부분(tfoot) */
+#drama tfoot td{
+    text-align: center;
+    padding: 45px 0;
+}
+
+/* 본문 배경색 짝수만 넣기
+짝수 - even 홀수 - odd */
+#drama tbody tr:nth-child(even) td{
+    background-color: rgb(197, 197, 197);
+}
+/* 링크 a 변경  */
+#drama a{
+    text-decoration: none;
+    color: #222;
+}
+#drama tbody a:hover{
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    color: hotpink;
+}
+#drama tfoot a:hover{
+    text-decoration: overline;
+    text-decoration-style: dotted;
+    color: darkgreen;
+}
