--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
@@ -60,6 +60,7 @@
 /* 780px 사이즈 이하 미디어쿼리 시작 */
 @media screen and (max-width: 780px) {
     html,body{
+        position: relative;
         width: 100vw;
         overflow-x: hidden;
     }
