--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -57,50 +57,56 @@ nav.gnb ul {
     font-size: 1.7rem;
     line-height: 2rem;
 }
-/* GNB 서브메뉴 배경
-상위메뉴 li에 가상요소로 만들기
-서브메뉴가 있는 li에 sm이름의 클래스를 준다! */
-.gnb > ul > li.sm::before {
-    content: "";
-    position: absolute;
-    top: 129px;
-    left: 0;
-    width: 100%;
-    /* 부모는? */
-    height: 0;
-    background-color: #fff;
 
-    transition: 0.5s ease-out;
-}
-/* 상위메뉴 오버시 서브배경보이기 */
-.gnb > ul > li.sm:hover::before {
-    border-bottom: 2px solid red;
-    transition-duration: 0.3s;
-}
+/* 모바일에서는 오버 시 설정이 적용되지 않도록
+미디어쿼리 min-width사용한 구역에 넣어준다 
+-> 780px 이상일 때만 적용됨!*/
+@media screen and (min-width:780px) {
+        
+    /* GNB 서브메뉴 배경
+    상위메뉴 li에 가상요소로 만들기
+    서브메뉴가 있는 li에 sm이름의 클래스를 준다! */
+    .gnb > ul > li.sm::before {
+        content: "";
+        position: absolute;
+        top: 129px;
+        left: 0;
+        width: 100%;
+        /* 부모는? */
+        height: 0;
+        background-color: #fff;
 
-/* 상위메뉴 li오버시 서브메뉴 보이기 */
+        transition: 0.5s ease-out;
+    }
+    /* 상위메뉴 오버시 서브배경보이기 */
+    .gnb > ul > li.sm:hover::before {
+        border-bottom: 2px solid red;
+        transition-duration: 0.3s;
+    }
 
-/* 프로그램소개 */
-.gnb > ul > li:first-child:hover::before {
-    height: 120px;
-}
-.gnb > ul > li:first-child:hover .smenu {
-    height: 100px;
-}
-/* 동영상 */
-.gnb > ul > li:nth-child(3):hover::before {
-    height: 150px;
-}
-.gnb > ul > li:nth-child(3):hover .smenu {
-    height: 130px;
-}
-/* 사진첩 */
-.gnb > ul > li:nth-child(4):hover::before {
-    height: 90px;
-}
-.gnb > ul > li:nth-child(4):hover .smenu {
-    height: 70px;
-}
+    /* 상위메뉴 li오버시 서브메뉴 보이기 */
+
+    /* 프로그램소개 */
+    .gnb > ul > li:first-child:hover::before {
+        height: 120px;
+    }
+    .gnb > ul > li:first-child:hover .smenu {
+        height: 100px;
+    }
+    /* 동영상 */
+    .gnb > ul > li:nth-child(3):hover::before {
+        height: 150px;
+    }
+    .gnb > ul > li:nth-child(3):hover .smenu {
+        height: 130px;
+    }
+    /* 사진첩 */
+    .gnb > ul > li:nth-child(4):hover::before {
+        height: 90px;
+    }
+    .gnb > ul > li:nth-child(4):hover .smenu {
+        height: 70px;
+    }
 
 /* 가상요소로 밑줄 애니만들기 
 대상선택:
@@ -126,6 +132,7 @@ nav.gnb ul {
     width: 100%;
     margin-left: 0%;
 }
+}/* 780px 이상일 때 오버 시 적용! */
 
 /* GNB 서브메뉴 */
 .smbx {
@@ -254,6 +261,10 @@ aside.tmenu {
     
     /* 처음에 숨기기 */
     display: none;
+}
+/* 햄버거모양 가상요소 넣기 */
+.ham::before{
+    content: '≡';
 }
 
 /***************** 2.메인영역 *****************/
