--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/media.css
@@ -65,9 +65,55 @@
         overflow-x: hidden;
     }
     /* 디스플레이 없애기 */
-    .tmenu, .gnb{
+    .tmenu
+    ,.smbx{
         display: none;
     }
+
+    /* GNB메뉴 변경하기
+    -> .top에 .on을 준 경우 적용됨!
+    -> 메뉴를 fixed로 고정 */
+    .top.on .gnb{
+        display: block;
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 9999;
+    }
+    /* 풀렉스박스로 방향을 세로로 변경 */
+    nav.gnb ul{
+        flex-direction: column;
+        text-align: center;
+        margin-top: 15vh;
+    }
+    /* GNB상위메뉴 a변경 */
+    .gnb > ul > li > a {
+        color: #fff;
+        font-size: 5vh;
+        line-height: 10vh;
+    }
+    /* 로고 */
+    h1.logo{
+        position: relative;
+        z-index: 99999;
+    }
+
+    /* 햄버거 버튼 보이기 */
+    .ham{
+        display: block;
+    }
+    /* 햄버거버튼 상위.top에 클래스 on 줄 경우 x버튼으로 변경 */
+    .top.on .ham{
+        z-index: 9999;
+        color: #fff;
+        transform: scale(1.5);
+    }
+    .top.on .ham::before{
+        content: 'x';
+    }
+    
     /* 상단영역 */
     .top{
         position: relative;
@@ -106,9 +152,7 @@
         bottom: 10px;
         top: auto;
     }
-    /* 햄버거 버튼 보이기 */
-    .ham{
-        display: block;
-    }
+
+    
 }
 /* 780px 사이즈 이하 미디어쿼리 끝 */
