--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -4,6 +4,9 @@
 /***************** 1.상단영역 *****************/
 /* 겉박스 */
 #top {
+    position: relative;
+    z-index: 9999;
+    /* 메인영역보다 위 - 이유 : GNB서브메뉴가 위로와야함 */
     background-color: #fff;
     /* 하단보더 */
     border-bottom: 1px solid #ccc;
