--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/main.css
@@ -18,7 +18,7 @@ body{
     /* background : 색이반고윙/크 */
     /* 콤마로 구분하여 여러 배경이미지를 넣을 수 있고 먼저 쓴 이미지가 위에 온다 */
     background: 
-    url(../images/bg_logo_a_01.png) no-repeat fixed 10% 20%/10%,
+    url(../images/bg_logo_a_01.png) no-repeat fixed 10% 28%/10%,
     url(../images/bg_mainvisual.jpg) no-repeat fixed center/cover;
     /* 외부css에서 이미지 경로를 잡을 때 주의사항!
     -> CSS파일 위치에서 이미지를 찾아가야함 */
@@ -28,6 +28,8 @@ body{
 /*************** 메인영역 ***************/
 /* 메인영역 속박스 */
 .cont{
+    position: relative;
+    /* 부모자격 -#mvtxt */
     overflow: hidden;
     /* 자식요소 위, 아래 마진포함 */
 }
@@ -219,7 +221,7 @@ body{
 /* 등장글자 이미지 */
 #mvtxt{
     position: absolute;
-    top: 30vh;
+    top: 15vh;
     right: 5vw;
     width: min(20vw,327px);
 }
