--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -192,7 +192,7 @@ body{
     transition: .3s ease-out;
 }
 /* .gnb에 오버시 영사기회전 */
-.gnb:hover #cam img{
+.gnb>ul>li:hover #cam img{
     transform: rotate(0deg);
     /* 오버시 기다림 없음 */
     transition-delay: 0s;
