--- a/001.HTML학습/02.Drama_PJ/css/drama.css
+++ b/001.HTML학습/02.Drama_PJ/css/drama.css
@@ -86,3 +86,43 @@ html,body{
     text-decoration-style: dotted;
     color: darkgreen;
 }
+
+/* 구분테이블 박스 */
+.gubun{
+    width: 1000px;
+    margin: 0 auto;
+    /* outline: 1px dashed red; */
+    margin-bottom: 100px;
+    
+    overflow: hidden;
+    /* 자식 float 감싸기 */
+}
+/* 구분테이블 */
+table#gubun{
+    font-size: 20px;
+    border: 1px solid #999;
+    /* 오른쪽 끝으로 보내기 */
+    float: right;
+
+    /* td(테이블셀)에 사이간격주기 */
+    border-collapse: separate;
+    
+    border-spacing: 10px;
+    /* 셀사이 간격  */
+    /* border-spacing: 양방향; */
+    /* border-spacing: 가로 세로; */
+}
+
+/* 구분테이블 td */
+#gubun td{
+    padding: 10px;
+    /* border: 1px solid #000; */
+}
+/* 구분테이블 첫번째 tr의 첫번째 td의 오른쪽 점선넣기 */
+#gubun tr:first-child td:first-child{
+    border-right: 1px dotted #999;
+}
+/* 구분테이블의 두번째 tr부터 끝까지 td 위쪽점선보더 넣기 */
+#gubun tr+tr td{
+    border-top: 1px dotted #999;
+}
