--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/member.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/member.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* 도깨비 PJ 회원가입 css - login.css*/
+/* 도깨비 PJ 회원가입 페이지 css - member.css*/
 
 /* 공통 외부 css 합치기 */
 @import url(reset.css);
