--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
@@ -45,7 +45,10 @@ body * {
 /* 2-2. 컨텐츠 박스 유형별 클래스*/
 /* 유형1 - 1개박스구성 : .pt1 */
 .pt1{
-    height: 724px;
+    /* 비율 적용 시 height값은 주지않는다 */
+    /* height: 724px; */
+
+    aspect-ratio: 1300/724;    
 }
 /* 유형1 컨텐츠박스 */
 .pt1 .cbx{
@@ -57,7 +60,11 @@ body * {
 .pt2{
     /* 플렉스박스 */
     display: flex;
-    height: 650px;
+    /* 비율 적용 시 height값은 주지않는다 */
+    /* height: 650px; */
+
+    /* 1300 : 650 비율 */
+    aspect-ratio: 1300 / 650;
 }
 /* 유형2 컨텐츠박스 : 등분할 가로정렬박스 */
 .pt2 .cbx{
