--- a/001.HTML학습/08.CubeTrip/css/main.css
+++ b/001.HTML학습/08.CubeTrip/css/main.css
@@ -1,38 +1,107 @@
 @charset "utf-8";
+/* 큐브트립 메인 CSS - main.css */
 
-/* 큐브애니메이션 css - cube.css */
-html,body{
+/* 웹폰트 */
+@import url('https://fonts.googleapis.com/css?family=Black+And+White+Picture|East+Sea+Dokdo|Jua&display=swap');
+/*
+    font-family: 'Black And White Picture', sans-serif;
+    font-family: 'East Sea Dokdo', cursive;
+    font-family: 'Jua', sans-serif;
+*/
+
+/* 초기화 */
+html,body,h1,ul{
     margin: 0;
     padding: 0;
 }
 body{
-    background-image: linear-gradient(to bottom,rgb(132, 203, 236) ,rgb(132, 235, 157));
     height: 100vh;
+    background-image: linear-gradient(to bottom, #777 30%, #ccc 70%);
 }
 
-/* 변수셋팅 */
+/********************* 변수셋팅 *********************/
 :root{
     /* 큐브 공통크기 
     --변수명
-    변수명은 내맘대로!
-    */
+    변수명은 내맘대로!*/
     --csz:30vw;
 }
 
-/* 작동버튼 */
-.btngo{
-    position: fixed;
-    top: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 40px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-.btngo:hover{
-    background-color: lime;
+/******************** 1.전체제목 ********************/
+.tit{
+    text-align: center;
+    font-family: 'Black And White Picture', sans-serif;
+    color: #fff;
+    font-size: 60px;
+    font-weight: normal;
+    padding-top: 50px;
+    background: url(../images/citybg.png) no-repeat center 20px/auto 100%;
+    
+    text-shadow: 1px 1px 1px #000;
 }
 
+/******************** 2.메뉴버튼 ********************/
+.city{
+    position: fixed;
+    top: 50px;
+    right: 50px;
+}
+.city ul{
+    list-style: none;
+    width: min(200px,15vw);
+    perspective: 50vw;
+}
+.city li{
+    height: 10vh;
+    /* 보이는 화면의 10% -> 메뉴 6개 = 60% */
+    background-image: linear-gradient(to right, transparent, blue);
+    /* 축변경 */
+    transform-origin: right;
+    transition: .2s ;
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(1):hover{
+    transform: rotateY(45deg);
+    background-image: linear-gradient(to right, transparent, lightskyblue);
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(2):hover{
+    transform: rotateY(25deg);
+    background-image: linear-gradient(to right, transparent, lightgreen);
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(3):hover{
+    transform: rotateY(-35deg);
+    background-image: linear-gradient(to right, transparent, lightsalmon);
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(4):hover{
+    transform: rotateY(55deg);
+    background-image: linear-gradient(to right, transparent, orange);
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(5):hover{
+    transform: rotateY(25deg);
+    background-image: linear-gradient(to right, transparent, lightpink);
+}
+/* li에 오버 시 y축회전하기 */
+.city li:nth-child(6):hover{
+    transform: rotateY(-25deg);
+    background-image: linear-gradient(to right, transparent, aqua);
+}
+
+.city a{
+    display: block;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    font: 5vh/10vh 'East Sea Dokdo';
+    text-align: center;
+    color: #fff;
+}
+
+
+/******************** 3.큐브박스 ********************/
 /* 큐브 */
 .cube{
     position: absolute;
