--- a/001.HTML학습/08.CubeTrip/css/main.css
+++ b/001.HTML학습/08.CubeTrip/css/main.css
@@ -10,7 +10,7 @@
 */
 
 /* 초기화 */
-html,body,h1,ul{
+html,body,h1,h2,ul,p{
     margin: 0;
     padding: 0;
 }
@@ -24,7 +24,7 @@ body{
     /* 큐브 공통크기 
     --변수명
     변수명은 내맘대로!*/
-    --csz:30vw;
+    --csz:25vw;
 }
 
 /******************** 1.전체제목 ********************/
@@ -43,8 +43,8 @@ body{
 /******************** 2.메뉴버튼 ********************/
 .city{
     position: fixed;
-    top: 50px;
-    right: 50px;
+    top: 3vw;
+    right: 3vw;
 }
 .city ul{
     list-style: none;
@@ -126,8 +126,8 @@ body{
     transform-style: preserve-3d;
 
     /* 입체를 잘보이게 하기 위해 약간 회전함 */
-    transform:
-    rotateX(10deg) rotateY(30deg);
+    /* transform:
+    rotateX(10deg) rotateY(30deg); */
 
     /* outline: 2px solid red; */
 
@@ -148,7 +148,7 @@ body{
 
 /* 1. 앞면 */
 .cube span:nth-child(1){
-    background: url(../images/newyorkCity.jpg) no-repeat right/auto 105%;
+    background: url(../images/cityMain.jpg) no-repeat center/cover;
 
     /* 화면방향(z축) */
     transform: translateZ(calc(var(--csz)/2));
@@ -156,7 +156,7 @@ body{
 }
 /* 2. 오른면 */
 .cube span:nth-child(2){
-    background: url(../images/seoulCity.jpg) no-repeat center/cover;
+    background: url(../images/London_city.jpg) no-repeat center/cover;
 
     /* 화면방향(z축) */
     transform : rotateY(90deg) translateZ(calc(var(--csz)/2));
@@ -174,7 +174,7 @@ body{
 }
 /* 4. 왼면 */
 .cube span:nth-child(4){
-    background: url(../images/cityMain.jpg) no-repeat center/cover;
+    background: url(../images/berlin_city.jpg) no-repeat center/cover;
 
     /* 화면방향(z축) */
     transform : rotateY(-90deg) translateZ(calc(var(--csz)/2));
@@ -183,7 +183,7 @@ body{
 }
 /* 5. 윗면 */
 .cube span:nth-child(5){
-    background: url(../images/citys.jpg) no-repeat center/100% 105%;
+    background: url(../images/seoulCity.jpg) no-repeat center/cover;
 
     /* 화면방향(z축) */
     transform : rotateX(90deg) translateZ(calc(var(--csz)/2));
@@ -192,7 +192,7 @@ body{
 }
 /* 6. 아랫면 */
 .cube span:nth-child(6){
-    background: url(../images/London_city.jpg) no-repeat center/cover;
+    background: url(../images/London_city.jpg) no-repeat right/auto 105%;
 
     /* 화면방향(z축) */
     transform : rotateX(-90deg) translateZ(calc(var(--csz)/2));
@@ -230,4 +230,53 @@ body{
         /* rotateX(370deg) rotateY(-330deg) rotateZ(360deg); 
         z축회전도 적용할 수 있음 */
     }
+}
+
+/******************* 4.도시정보박스 *******************/
+.cbx{
+    position: absolute;
+    top: calc(50% - var(--csz)/2);
+    left: calc(50% - var(--csz)/2);
+    /* 정중앙계산: 50%-크기절반 
+    calc()연산시 주의사항
+    -> +,-는 기호 앞뒤 띄어쓰기
+    -> *,/는 붙여써도 됨 */
+    
+    width: var(--csz);
+    height: var(--csz);
+
+    /* 글자설정 */
+    font-family: 'Jua', sans-serif;
+    color: #fff;
+    text-shadow: 0 0 2px #000;
+
+    /* 처음에 투명하게 */
+    opacity: 0;
+
+    /* outline: 2px dashed red; */
+}
+/* 도시정보 속박스 */
+.ctxt{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 3px solid #fff;
+    box-sizing: border-box;
+}
+/* 도시명 */
+h2.cname {
+    line-height: min(5vw,100px);
+    text-align: center;
+    font-size: min(40px,2.5vw);
+}
+/* 도시설명 */
+p.cinfo{
+    /* 타이틀을 제외한 영역채우기 */
+    height: calc(100% - min(5vw,100px));
+    box-sizing: border-box;
+    
+    padding: min(10px,1vw);
+    font-size: min(16px,1vw);
+    line-height: min(28px,1.5vw);
+    background-color: rgba(0, 0, 0, 0.3);
 }
