--- a/001.HTML학습/08.CubeTrip/css/media.css
+++ b/001.HTML학습/08.CubeTrip/css/media.css
@@ -4,9 +4,34 @@
 반드시 link방식으로 html파일에 삽입한다! */
 
 /* 모바일 미디어쿼리 */
-@media only screen and (max-width:950px) {
-
-   
+@media only screen and (max-width: 950px) {
+    /* 1.메뉴박스 상단으로 위치 변경하기 */
+    .city {
+        top: auto;
+        bottom: 3vw;
+        right: auto;
+        left: 3vw;
+        width: 94vw;
+    }
+    .city ul {
+        display: flex;
+        width: auto;
+    }
+    .city li {
+        flex: 1;
+    }
+    :root {
+        --csz: 65vw;
+    }
+    h2.cname {
+        font-size: 6vw;
+        line-height: 10vw;
+    }
+    p.cinfo {
+        height: calc(100% - 10vw);
+        font-size: 4vw;
+        line-height: 5vw;
+    }
 }
 
 /* 미디어쿼리  */
