--- a/001.HTML학습/08.CubeTrip/css/media.css
+++ b/001.HTML학습/08.CubeTrip/css/media.css
@@ -20,6 +20,10 @@
     .city li {
         flex: 1;
     }
+
+    .city li:hover{
+        transform: none !important;
+    }
     :root {
         --csz: 65vw;
     }
