--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -212,6 +212,185 @@ body{
         opacity: 0.5;
     }
 }/* 키프레임 */
+/* 1-3.극장가는 길 애니박스 */
+.anibx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* 부모는? .top */
+    width: 144px;
+    height: 80px;
+    
+    cursor: pointer;
+}
+/* 극장가는 길 타이틀 박스 */
+.anibx>span{
+    /* 커튼대문역할 */
+    position: absolute;
+    /* 변경속송 top 초기값 셋팅!(애니위해) */
+    top: 0;
+    z-index: 1;
+    display: block;
+    width: 144px;
+    height: 80px;
+
+    /* 나간 글자 숨기기 */
+    overflow: hidden;
+    
+    text-align: center;
+    line-height: 80px;
+    font-family: 'Cute Font', cursive;
+    color: #fff;
+    font-size: 20px;
+    /* 줄바꿈방지 */
+    white-space: nowrap;
+    /* 배경이미지 넣기 */
+    background: url(../images/curtain.jpg) no-repeat;
+    /* 애니메이션 : 이시이지반방마 */
+    animation: anibxAni 2.5s cubic-bezier(0.18, 0.89, 0.32, 1.28) infinite;
+    /* 트랜지션: 속시이지 */
+    transition: .3s ease-in-out;
+    
+}
+
+/* 오버시 타이틀애니박스 들춰지기 */
+.anibx:hover>span{
+    transform: translateY(-100%);
+    /* top은 기본값이 auto이므로 애니메이션 하려면 top:0으로 초기값 필요 */
+    outline: 1px solid aqua;
+}
+
+/* 타이틀 애니 키프레임 */
+@keyframes anibxAni {
+    0%{
+        text-indent: 0;
+    }
+    /* 50~70% 오른쪽으로 나감! */
+    50%{
+        text-indent: 0;
+    }
+    70%{
+        text-indent: 250px;
+    }
+    /* 위치변경 왼쪽 바깥 */
+    70.1%{
+        text-indent: -250px;
+    }
+    /* 80~100% 왼쪽에서 들어옴! */
+    80%{
+        text-indent: -250px;
+    }
+    100%{
+        text-indent: 0;
+    }
+    
+}
+/* 스크린 */
+.cellAni{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 144px;
+    height: 80px;
+
+    /* 배경넣기 */
+    background: url(../images/street.jpg) repeat-x;
+    background-size: auto 100%;
+
+    /* 애니메이션: 이시이지반방마 */
+    animation: street 4s linear infinite;
+}
+
+/* 스크린배경이동 키프레임 */
+@keyframes street {
+    to{
+        background-position: -136px 0;
+    }
+}
+/* 키프레임 */
+
+/* 3-1.걷는존 */
+.spani1{
+    position: relative;
+    width: 30%;
+    height: 100%;
+    margin: 0 auto;
+
+    background: url(../images/spAni03.png) no-repeat;
+    background-size: auto 100%;
+
+    /* 애니메이션: 이시이지반방마 */
+    animation: spani1 1s steps(8) infinite;
+
+    /* outline: 5px solid red; */
+}
+
+/* 걷는존 키프레임 */
+@keyframes spani1 {
+    to{
+        background-position: -362px 0;
+    }
+    /* 배경이미지 x축 이동일 경우f
+    줄였을때 이미지 전체 가로크기를
+    마이너스 값으로 써주면된다! */
+}
+
+/* 키프레임 */
+/* 3-2.꼬마 */
+.spani2{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 20px;
+    height: 29px;
+    background: url(../images/spAni01.png) no-repeat;
+
+    /* 배경사이즈 변경 */
+    background-size: 200px;
+    /* 애니메이션: 이시이지반방마 */
+    animation: spani2 1s steps(10) infinite;
+}
+
+/* 꼬마 키프레임 */
+@keyframes spani2 {
+    to{
+        background-position: -200px 0;
+    }
+}
+/* 키프레임 */
+
+/* 3-3.몬스터 */
+.spani3{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    background: url(../images/spAni02.png) no-repeat;
+
+    background-size: 240px;
+    /* 애니메이션: 이시이지반방마 */
+    animation: 
+    spani3X 1s steps(6) infinite,
+    spani3Y 3s steps(3) infinite;
+    /* x축은 6장면을 1초간 작동
+    y축은 3줄을 3초간 작동 */
+}
+
+/* 몬스터 키프레임 X축 */
+@keyframes spani3X {
+    to{
+        background-position-x: -240px;
+    }
+    /* x축은 가로크기를 마이너스로 씀 */
+}
+/* 몬스터 키프레임 Y축 */
+@keyframes spani3Y {
+    to{
+        background-position-y: -120px;
+    }
+    /* y축은 세로크기를 마이너스로 씀 */
+}
 
 
 /************************ 2.메인영역 ************************/
@@ -247,8 +426,9 @@ body{
     width: 60%;
     transform: translateX(-49%);
 
-    /* 앱솔루트 부모자격이 있는 요소의 overflow가 적용됨! */
-    overflow: hidden;
+    /* 앱솔루트 부모자격이 있는 요소의 overflow가 적용됨!
+    -> li각각에 처리함 */
+    /* overflow: hidden; */
 }
 /* 선택메뉴 ul */
 .mlist ul{
@@ -256,6 +436,8 @@ body{
     display: flex;
     /* 진행방향정렬 : 양쪽 끝 맞춘 후 사이간격 일정 */
     justify-content: space-between;
+    /* 원근3D적용 -> 보이는 화면 높이값의 50% */
+    perspective: 50vh;
 }
 /* 상위 li 두번째 부터 끝까지 왼쪽마진 */
 .mlist ul>li+li {
@@ -268,6 +450,24 @@ body{
     flex: 1;
     /* 등분할설정 */
     overflow: hidden;
+
+    /* x축회전 적용하기 */
+    transform: rotateX(30deg);
+    /* 회전축 변경 : 하단 */
+    transform-origin: bottom;
+    /* 트랜지션 : 속시이지 */
+    transition: .4s;
+}
+/* 마우스 오버시 + 클래스 "on"적용시
+포스터 일어나기! */
+.mlist ul>li:hover,
+.mlist ul>li.on {
+    /* x축회전 */
+    transform: translateX(0);
+    /* 다른 li보다 위 */
+    z-index: 1;
+    /* 테두리 생김 */
+    outline: 1px solid aqua;
 }
 /* 포스터 이미지 */
 .mlist img{
@@ -387,3 +587,42 @@ body{
     - 사용하는 문자열에 문제가 없다면 따옴표를 쓰지 않아도 된다!
     (띄어쓰기, 특수문자 등이 있다면 따옴표사용)
 ******************************************/
+
+/* 구글맵 지도박스 */
+.gmap{
+    position: fixed;
+    top: -50%;
+    /* 처음에 top값으로 윗쪽에 숨김! */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* 정중앙이동 */
+
+    width: 600px;
+    height: 450px;
+    background-color: #fff;
+    border: 20px solid hotpink;
+    border-radius: 10px;
+    z-index: 99;
+    /* 트랜지션 : 속시이지 */
+    transition: top .8s cubic-bezier(0.65, 0.05, 0.36, 1);;
+}
+/* 구글맵에 클래스 "on"적용시 등장하기 */
+.gmap.on{
+    top: 50%;
+}
+/* 닫기버튼 */
+.cbtn{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #000;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+/* 기본 포커스 아웃라인 제거 */
+.cbtn:focus{
+    outline: none;
+}
