--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/common.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/common.css
@@ -105,6 +105,7 @@
     padding: 7px 10px;
     padding-right: 19px;
     color: #747474;
+    background-color: #fff;
 }
 /* 서브메뉴 마우스 오버시 */
 .smsub a:hover{
@@ -126,10 +127,51 @@ https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor
     margin-bottom: 10px;
     text-align: center;
 }
+
+
 /* 1-3.GNB박스 */
 .gnb{
     min-height: 46px;
     padding: 0 30px;
+}
+/* GNB ul박스 */
+.gnb ul{
+    /* 플렉스박스 */
+    display: flex;
+    /* 플렉스진행방향 */
+    justify-content: center;
+    /* 플렉스 줄바꿈설정 */
+    flex-wrap: wrap;
+    /* 사이간격 속성 -> gap: 위아래 양쪽(flex에서 사용함)
+        -> 숫자를 하나만 쓰면 양방향이 모두 같은 수치 셋팅 */
+     gap: 0 45px;
+}
+
+/* GNB li 리스트 */
+.gnb li{
+    /* padding-right: 45px;
+    -> 사이간격을 li에 패딩으로 안주고 부모요소인 flex박스에서 gap속성으로 준다 */
+    font-family: 'Roboto Condensed', sans-serif;
+    line-height: 40px;
+}
+
+/* 마지막 li 돋보기 */
+.gnb li:last-child{
+    padding: 0;
+}
+.gnb li:last-child a{
+    font-weight: bold;
+    padding-top: 2px;
+}
+
+/* GNB a요소 */
+.gnb a{
+    /* 트랜지션 */
+    transition: color .2s linear;
+}
+/* 오버 시 a요소 */
+.gnb a:hover{
+    color: red;
 }
 
 
