--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -65,11 +65,12 @@
 @media screen and (max-width: 800px) {
     /* 메인타이틀 */
     .tit {
-        font-size: 8.7vw;
+        font-size: min(40px,8.7vw);
     }
     /* 선택메뉴 ul */
     .mlist ul {
         flex-wrap: wrap;
+        gap: 1vh 2.2%;
     }
     /* 선택메뉴 상위 li */
     .mlist ul > li {
