--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/media.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/media.css
@@ -33,7 +33,7 @@
     #cam {
         right: 0px;
         bottom: 133px;
-        z-index: 0; /* -1을 복귀함 */
+        /* z-index: 0; */ /* -1을 복귀함 */
         cursor: pointer;
     }
     /* 서브메뉴 오버 시 안나오게함 
