--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
@@ -127,6 +127,19 @@ body * {
     color: #fff;
 }
 
+/* 4. 스크롤 등장액션 클래스 */
+.scAct {
+    transform: translateY(20%);
+    opacity: 0;
+    transition: .8s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+}
+/* 등장클래스+ .on */
+.scAct.on {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+
 /* 글자 숨김 클래스(IR배경이미지 설명 등 숨기기) */
 .ir {
     display: block;
