--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/common.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/common.css
@@ -138,7 +138,7 @@ https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor
 
 /* 1-3.GNB박스 */
 .gnb{
-    min-height: 46px;
+    min-height: 45px;
     padding: 0 30px;
 }
 /* GNB ul박스 */
@@ -179,6 +179,68 @@ https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor
 /* 오버 시 a요소 */
 .gnb a:hover{
     color: red;
+}
+
+/*************************************************** 
+    #top.on 인 경우 슬림디자인 상단영역적용!
+***************************************************/
+/* 0. 상단영역 최상위박스 fixed고정 */
+
+
+/* 1. 상단영역 최소높이 해제 */
+#top.on{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #fff;
+    width: 100%;
+}
+#top.on .top{
+    min-height: 50px;
+}
+/* 2. 상단메뉴없애기 */
+#top.on .tmenu{
+    display: none;
+}
+/* 3. 로고이미지 */
+#top.on .logo img{
+    width: 100px;
+}
+/* 4. 로고박스 */
+#top.on .logo{
+    position: absolute;
+    left: 0;
+    /* 부모는? #top */
+    padding: 10px;
+    height: auto;
+    margin-bottom: 0;
+}
+/* 5. GNB메뉴 a */
+#top.on .gnb a{
+    color: #333;
+    font-size: 14px;
+}
+/* 오버시 우선적용문제로 빨간색글자 재적용하기 */
+#top.on .gnb a:hover{
+    color: red;
+}
+/* 6. GNB박스 */
+#top.on .gnb{
+    min-height: 45px;
+    padding-top: 5px;
+    /* -> 미디어쿼리로 처리하자
+    padding: 5px 30px 0 120px; */
+}
+/* 7. GNB박스 ul */
+#top.on .gnb ul{
+    gap: 0 35px;
+}
+#top.on{
+
+}
+#top.on{
+
 }
 
 
@@ -230,4 +292,35 @@ https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor
 }
 .blink li:last-child a{
     font-weight: bold;
+}
+
+
+/* 위로가기 버튼 */
+.tbtn {
+    position: fixed;
+    bottom: -35px; /* 아랫쪽에 나가있음 */
+    right: 75px;
+    width: 48px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    background-color: #333;
+    border-radius: 4px 4px 0 0;
+    color: #fff;
+    z-index: 9999;
+    font-size: 12px;
+    opacity: 0; /* 처음에 투명 */
+    /* 트랜지션 - bottom엔 적용되면 안되므로 별도지정함 */
+    transition: background-color 0.3s, opacity 0.3s;
+}
+
+/* 위로가기 버튼 보이기상태 */
+.tbtn.on {
+    opacity: 1;
+    bottom: 0;
+}
+
+/* 위로가기 버튼 오버시 */
+.tbtn:hover {
+    background-color: red;
 }
