--- a/팀프_메인구현소스/css/common.css
+++ b/팀프_메인구현소스/css/common.css
@@ -84,6 +84,11 @@ nav.gnb ul{
   cursor: pointer;
   background-color: #575a5ecb;
 }
+/* 우측 상단영역에 아이콘 */
+.gnb img{
+  width: 40px;
+  height: 40px;
+}
 /* 클릭시 .on 활성화 */
 .sbx.on{
   width: 200px;
