--- a/팀프_메인구현소스/css/sub_Mars.css
+++ b/팀프_메인구현소스/css/sub_Mars.css
@@ -109,3 +109,8 @@ body *{
 }
 /********************* 3페이지 *********************/
 /******************* 3페이지공통 *******************/
+.pg3 iframe{
+    width: 100px;
+    height: 100px;
+    display: flex;
+}
