--- a/팀프_메인구현소스/css/main.css
+++ b/팀프_메인구현소스/css/main.css
@@ -11,8 +11,33 @@
 body{
   -ms-overflow-style: none;
 }
+body::after{
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  background-color: #000;
+  animation: introAni 1s ease-in-out forwards;
+}
 ::-webkit-scrollbar {
   display: none;
+}
+
+@keyframes introAni {
+  0%{
+    opacity: 1;
+  }
+  90%{
+    opacity: 0;
+    height: 100vh;
+  }
+  100%{
+    opacity: 0;
+    height: 0;
+  }
 }
 
 /************* 2. 메인영역 **************/
