--- a/001.HTML학습/05.Nav_PJ/nav06/css/main.css
+++ b/001.HTML학습/05.Nav_PJ/nav06/css/main.css
@@ -6,29 +6,43 @@
 @import url(./reset.css);
 @import url(./common.css);
 
-/* 배터전체박스 */
+/* 배너전체박스 */
 .banbx{
     position: relative;
     /* 부모자격 */
-    height: 100vh;
+    /* height: 100vh; */
+    /* aspect-ratio: 1 / 0.4; */
+    /* background: red; */
+    padding: 80px 0;
+    
+}
+
+/* 가상요소로 배경색 넣기 */
+.banbx.ban1::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 70%;
+    background-color: #222;
 }
 
 /* 배너컨텐츠박스 */
 .bancont {
     /*슬라이드부모*/
-    position: absolute;
-    /* 부모는? .page */
-    top: 50%;
-    transform: translateY(-50%);
+    position: relative;
+    /* 자리를 차지함! */
+    /* top: 50%; */
+    /* transform: translateY(-50%); */
     /* 세로중앙 */
     left: 25vw;
-
     width: 50vw;
     aspect-ratio: 1/.55;
     /* border: 2px solid red; */
     box-sizing: border-box;
-    outline: 5px dotted blue;
+    /* outline: 5px dotted blue; */
 }
+
 
 .slide {
     display: flex;
@@ -54,18 +68,18 @@
     /* 가로크기를 부모박스 크기에 맞춤! */
     /* height 값은 flex박스 자식요소에서
     등분할시 자동 100%임! */
-    outline: 2px dashed red;
+    /* outline: 2px dashed red; */
 
      /* 필터로 밝기조절(어둡게) */
-     filter: brightness(70%);
-    
+     /* filter: brightness(70%); */
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.479);
      /* 트랜지션 */
      transition: .4s;
 }
-/* 3번째가 주인공이므로 원래밝기로 조금 크게변경! */
-.slide li:nth-child(3){
+/* 첫번째배너만 3번째가 주인공이므로 원래밝기로 조금 크게변경! */
+.ban1 .slide li:nth-child(3){
     filter: brightness(100%);
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 .slide li img {
@@ -79,17 +93,53 @@
 /*이동버튼*/
 .abtn {
     position: absolute;
+    width: 24px;
+    height: 51px;
     top: 50%;
     transform: translateY(-50%);
     /*Y축 중앙이동*/
+    /* outline: 1px solid red; */
+
+    background-image: url(../img_nav06/main.png);
+    background-size: 190px 175px;
+    background-repeat: no-repeat;
 }
 
 /*왼쪽버튼*/
 .ab1 {
-    left: 50px;
+    left: 16.5vw;
+    background-position: -26px -124px;
 }
 
 /*오른쪽버튼*/
 .ab2 {
-    right: 50px;
+    right: 15.5vw;
+    background-position: -166px -53px;
+}
+
+/* IR */
+.ir{
+    display: block;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+.ban2{
+    width: 18.6%;
+    overflow: hidden;
+    margin: 100px auto;
+    padding: 0;
+}
+.ban2 .bancont{
+    width: 100%;
+    aspect-ratio: 1/1;
+    transform: translateX(-50%);
+}
+/* 버튼위치 */
+.ban2 .ab1{
+    left: 20px;
+}
+.ban2 .ab2{
+    right: 20px;
 }
