--- a/001.HTML학습/05.Nav_PJ/nav06/css/common.css
+++ b/001.HTML학습/05.Nav_PJ/nav06/css/common.css
@@ -24,10 +24,13 @@
     /* 뷰모자격 - .smenu */
     font-family: 'Noto Sans KR', sans-serif;
     background-color: #222;
+    z-index: 999;
 }
-.top{
+/* .top{
     min-height: 350px;
-}
+} */
+
+
 /* 1-1.탑메뉴영역 */
 .tmenu{
     height: 80px;
